update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -108,7 +108,7 @@
 - date: 2021-06-15
   name: "Day 2: Collecting Digital Trace Data"
   events:
-    - name: "[Day 2: Pre-arrival videos, corresponding slides, & annotated code](https://sicss.io/curriculum)"
+    - name: "[Day 2: Pre-arrival videos, corresponding slides, & annotated code](https://sicss.io/curriculum) [(Takeaway Sheet)](https://docs.google.com/document/d/13lPvBhJwo2P_xH-2Hu6avews-isoYoEBV8i4r4_-gtk/edit?usp=sharing)"
     - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) (*Zoom*)(video) "
     - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data (*Zoom*) (video)"
