--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -100,11 +100,14 @@
    # - name: "Analyse de texte basée sur un dictionnaire. [Video](https://www.youtube.com/watch?v=wSIi2ZRKjaE). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/dictionary-methods/Rpres/Dictionary_Based_Analysis.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/dictionary-methods/rmarkdown/Dictionary-Based_Text_Analysis.html)."
    # - name: "Modèles thématiques. [Video](https://www.youtube.com/watch?v=T2ZRBi1oUME). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/topic-modeling/Rpres/Topic_Modeling.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/topic-modeling/rmarkdown/Topic_Modeling.html)."
    # - name: "Réseaux de texte. [Video](https://www.youtube.com/watch?v=-2dBI2ULcQw). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/text-networks/Rpres/Text_Networks.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/text-networks/rmarkdown/Text_Networks.html)."
-    - name: "9:00 - 9:30 Debriefing"
-    - name: "9:30 - 10:30 Retour sur la vidéo du cours (Zoom)"
-    - name: "10:30 - 12:30 Labo (Zoom)"
-    - name: "12:30 - 1:30 Pause - courte formation: "
-    - name: "1:30 - 3:30 Travail en équipe (Zoom)"
+    - name: "9:30 - 10:00 Présentation"
+    - name: "10:00 - 11:30 Cours (Zoom)"
+    - name: "11:30 - 11:45 Pause"
+    - name: "11:45 - 12:45 Labo (Zoom)"
+    - name: "12:45 - 1:30 Pause - Dejeuner"
+    - name: "1:30 - 3:00 Travail en équipe (Zoom)"
+    - name: "3:00 - 3:15 Restittution des travaux d'équipe (Zoom)"
+    - name: "3:15 - 3:30 Pause, changement de la salle Zoom"
     - name: "3:30 - 5:00 Conférencier : [Anatoliy Gruzd](https://www.ryerson.ca/information-technology-management/faculty-research/anatoliy-gruzd/) ([**Computational Approaches to Studying Anti-Social Behavior in Social Media**](https://drive.google.com/file/d/1ghsTv6rzBlNs60q1K9ps3Yi1LAQh7k5q/view))"
 - date: 2021-06-16
   name: "Enquêtes à l'ère numérique"
@@ -114,21 +117,26 @@
     #- name: "Échantillonnage probabiliste et non probabiliste. [Video](https://www.youtube.com/watch?v=SLAi9v5CCnM). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/02-nonprobability-sampling.pdf)."
     #- name: "Entretiens administrés par ordinateur. [Video](https://www.youtube.com/watch?v=HT1bQ3Bh79w). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/03-computer-administered-interviews.pdf)."
     #- name: "Combiner sondages et mégadonnées. [Video](https://www.youtube.com/watch?v=_vecQs7aB6o). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/04-combining-surveys-and-big-data.pdf)."
-    - name: "9:00 - 9:30 Debriefing"
-    - name: "9:30 - 10:30 Retour sur la vidéo du cours (Zoom)"
-    - name: "10:30 - 12:30 Labo (Zoom)"
-    - name: "12:30 - 1:30 Pause - courte formation: A définir"
-    - name: "1:30 - 3:30 Travail en équipe (Zoom)"
+    - name: "9:30 - 10:00 Présentation"
+    - name: "10:00 - 11:30 Cours (Zoom)"
+    - name: "11:30 - 11:45 Pause"
+    - name: "11:45 - 12:45 Labo (Zoom)"
+    - name: "12:45 - 1:30 Pause - Dejeuner"
+    - name: "1:30 - 3:00 Travail en équipe (Zoom)"
+    - name: "3:00 - 3:15 Restittution des travaux d'équipe (Zoom)"
+    - name: "3:15 - 3:30 Pause, changement de la salle Zoom"
     - name: "3:30 - 5:00 Conférencier : [Éric Lacourse](https://recherche.umontreal.ca/nos-chercheurs/repertoire-des-professeurs/chercheur/is/in14715/) ([**Algorithmes d’apprentissage et modèles statistiques**](https://drive.google.com/file/d/1fdJTWYW2df90Mm19eMcvQpRL-27Ai2Fx/view))"
 - date: 2021-06-17
   name: Apprentissage automatique (machine learning)
   events:
-    - name: "_Vidéos à regarder_"
-    - name: "9:00 - 9:30 Debriefing"
-    - name: "9:30 - 10:30 Retour sur la vidéo du cours (Zoom)"
-    - name: "10:30 - 12:30 Labo (Zoom)"
-    - name: "12:30 - 1:30 Pause - courte formation: A définir"
-    - name: "1:30 - 3:30 Travail en équipe (Zoom)"
+    - name: "9:30 - 10:00 Présentation"
+    - name: "10:00 - 11:30 Cours (Zoom)"
+    - name: "11:30 - 11:45 Pause"
+    - name: "11:45 - 12:45 Labo (Zoom)"
+    - name: "12:45 - 1:30 Pause - Dejeuner"
+    - name: "1:30 - 3:00 Travail en équipe (Zoom)"
+    - name: "3:00 - 3:15 Restittution des travaux d'équipe (Zoom)"
+    - name: "3:15 - 3:30 Pause, changement de la salle Zoom"
     - name: "3:30 - 5:00 Conférencier : [Peter McMahan](https://www.mcgill.ca/sociology/contact-us/faculty/mcmahan) ([**Culture, knowledge, and data**](https://drive.google.com/file/d/1Q9ZhBhRd2HJl-JZX-6Zi-matdZD1vV3o/view))"
 - date: 2021-06-18
   name: Éthique
@@ -137,11 +145,14 @@
    # - name: "Éthique. [Video Partie 1](https://youtu.be/A-5QaX5ZiK8). [Slides Partie 1](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_part1.pdf)." 
     #- name: "Éthique. [Video Partie 2](https://youtu.be/TT6dOQMKHhA). [Slides Partie 2](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_part2.pdf)."
     #- name: "Éthique. [Video Ajouts et Extensions](https://youtu.be/lJyK6kXeDbc). [Slides Ajouts et Extensions](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_additions_extensions.pdf)."
-    - name: "9:00 - 9:30 Debriefing"
-    - name: "9:30 - 10:30 Retour sur la vidéo du cours (Zoom)"
-    - name: "10:30 - 12:30 Labo (Zoom)"
-    - name: "12:30 - 1:30 Pause - courte formation: A définir"
-    - name: "1:30 - 3:30 Travail en équipe (Zoom)"
+    - name: "9:30 - 10:00 Présentation"
+    - name: "10:00 - 11:30 Cours (Zoom)"
+    - name: "11:30 - 11:45 Pause"
+    - name: "11:45 - 12:45 Labo (Zoom)"
+    - name: "12:45 - 1:30 Pause - Dejeuner"
+    - name: "1:30 - 3:00 Travail en équipe (Zoom)"
+    - name: "3:00 - 3:15 Restittution des travaux d'équipe (Zoom)"
+    - name: "3:15 - 3:30 Pause, changement de la salle Zoom"
     - name: "3:30 - 5:00 Conférencier : [Golnoosh Farnadi](https://gfarnadi.github.io/) ([**Fairness in Machine Learning**](https://drive.google.com/file/d/1Z4umijhs8RqGiGUBnHB_HQTI6yOUVf7d/view))"
 - date: 2021-06-19
   name: Congé
