--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -51,7 +51,7 @@
 - date: 2021-06-18
   name: (Afternoon) Network Analysis 
   events:
-    - name: "2:15- 5:00 Live Network Analysis Tutorial"
+    - name: "2:15- 5:00 Live Network Analysis Tutorial [Tutorial materials](https://kateto.net/workshops/sicss/sicss2021.zip)"
 
 - date: 2021-06-19
   name: Day off
