update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -111,12 +111,12 @@
     - name: "[Day 2: Pre-arrival videos, corresponding slides, & annotated code](https://sicss.io/curriculum) [(Takeaway Sheet)](https://docs.google.com/document/d/13lPvBhJwo2P_xH-2Hu6avews-isoYoEBV8i4r4_-gtk/edit?usp=sharing)"
     - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) (*Zoom*)(video) "
-    - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data (*Zoom*) (video)"
+    - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data (*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: Wiki Education (encouraged) (*Zoom*) [(video)](https://youtu.be/m0FszWPsRYE) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 2:30 Develop a Sampling Frame (*Zoom*) (video)"
-    - name: "2:30 - 3:30 Populate the Sampling Frame with Screen-Scraping (*Zoom*) (video)"
+    - name: "1:15 - 2:30 Develop a Sampling Frame (*Zoom*))"
+    - name: "2:30 - 3:30 Populate the Sampling Frame with Screen-Scraping (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*) (video)"
   
 
@@ -124,29 +124,29 @@
   name: "Day 3: Automated Text Analysis"
   events:
     - name: "[Day 3: Pre-arrival videos, corresponding slides, & annotated code](https://sicss.io/curriculum)"
-    - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*) (You have received the Zoom link for today over email)"
+    - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*) (video)"
-    - name: "10:15 - 11:30 Extract Features from Trump Tweets (*Zoom*) (video)"
+    - name: "10:15 - 11:30 Extract Features from Trump Tweets (*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The Data Nutrition Project (encouraged) (*Zoom*) [(video)](https://youtu.be/wxZ3smIsp4A) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*) (video)"
+    - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*) (video)"
 
 - date: 2021-06-17
   name: "Day 4: Surveys in the Digital Age"
   events:
     - name: "[Day 4: Pre-arrival videos & corresponding slides](https://sicss.io/curriculum)"
-    - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*) (You have received the Zoom link for the day over email)"
     - name: "10:00 - 10:15 Logistics (*Zoom*) (video)"
     - name: "10:15 - 10:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md) (*Zoom*) (video)"
-    - name: "10:30 - 11:30 Morning group exercise (*Zoom*) (video)"
+    - name: "10:30 - 11:30 Morning group exercise (*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The California Policy Lab (encouraged) (*Zoom*) [(video)](https://youtu.be/POVOuJJy7Zo) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*) (video)"
+    - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*)"
     - name: "3:00 - 3:15 Break"
-    - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*) (video)"
+    - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*) (video)"
 
 - date: 2021-06-18
@@ -156,13 +156,13 @@
     - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "10:00 - 10:15 Logistics (*Zoom*)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*) (video)"
-    - name: "10:30 - 11:30 Participate in the Fragile Families Challenge activity [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*) (video)"
+    - name: "10:30 - 11:30 Participate in the Fragile Families Challenge activity [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: FactSpace West Africa and FakeNetAI (encouraged) (*Zoom*) [(video)](https://youtu.be/q5CVEa54Bt4) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*) (video)"
+    - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*)"
     - name: "3:00 - 3:15 Break"
-    - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*) (video)"
+    - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*) (video)"
     - name: "3:45 - 4:00 [Delete](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#deleting-the-files-after-use) the Fragile Families data from your computer"
     - name: "4:00 - 5:00 Final data assurance checks (*Zoom*)"
@@ -179,7 +179,7 @@
   - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
   - name: "10:15 - 12:00 Work on group projects"
-  - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*) (video)"
+  - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*)"
   - name: "1:00 - 4:00 Work on group projects"
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) (video) (Q&A) (slides)"
 
