--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -59,7 +59,7 @@
     - name: "13.00 - 13.15 Break"
     - name: "13.15 - 14.15 Small group lunches (*Zoom*)" 
     - name: "14.15 - 14.45 Break"
-    - name: "14.45 - 16.30 Introduction to the group exercise (*Zoom*)"
+    - name: "14.45 - 16.30 Group study (*Zoom*)"
       
 - date: 2021-06-19
   name: Day off
