--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -6,11 +6,11 @@
   events:
     - name: "10:00 - 10:20 Introduction to SICSS, Computational Social Science, and the California Center For Population Research by Dr. Jennie Brand (*In Zoom full group*)"
     - name: "10:20 - 10:40 Introductions (What is Computational Social Science) (*In rounds of Zoom break-out rooms*) "
-    - name: "10:45 - 11:45 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
+    - name: "10:45 - 11:45 Guest Speaker: Philipp Brandt (*In Zoom full group*)"
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 1:15 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
-    - name: "1:15 - 2:30 Project Speed Dating (*In Zoom breakout rooms*)"
-    - name: "2:30 - 4:00 Guest Speaker: TBD (*In Zoom full group*)"
+    - name: "1:15 - 2:30 Project Speed Dating: goal is to get to to know each other and brainstorm project ideas (*In Zoom breakout rooms*)"
+    - name: "2:30 - 4:00 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom (getting started with Slack, R, Q & A)"
 
 - date: 2021-06-22
@@ -21,7 +21,7 @@
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 1:15 Review Data Collection Exercise"
     - name: "1:15 - 2:45 Guest Speaker Panel: Computational Social Science in Industry TBD (*In Zoom full group*)"
-    - name: "3:00 - 3:45 Project Time"
+    - name: "3:00 - 3:45 Project Time: brainstorm project groups and ideas"
     - name: "3:45 - 4:00 Debrief"
   
 - date: 2021-06-23
@@ -32,7 +32,7 @@
     - name: "11:00 - 11:30 Small Group Discussions (*In Zoom break-out room*)"
     - name: "11:30 - 1:15 Break"
     - name: "1:30 - 3:00 Group Discussion + Exercise"
-    - name: "3:00 - 4:00 Guest Speaker: TBD (In Zoom full group)"
+    - name: "3:00 - 4:00 Project Time: finalize project groups, post abstract and list of group members to our #projects channel in Slack"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
 - date: 2021-06-24
@@ -62,8 +62,8 @@
     - name: "10:15 - 11:00 Lecture: Text Analysis (*In Zoom full group*)"
     - name: "11:00 - 11:45 Small Group Discussions + Exercise (*In Zoom break-out room*)"
     - name: "11:45 - 12:45 Break"
-    - name: "12:45 - 3:00 Project Time (*In Zoom break-out room*)"
-    - name: "3:00 - 4:00 Guest Speaker: TBD (*In Zoom full group*)"
+    - name: "12:45 - 3:00 Guest Speaker: TBD (*In Zoom break-out room*)"
+    - name: "3:00 - 4:00 Project Time (*In Zoom full group*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
 - date: 2021-06-29
@@ -83,8 +83,8 @@
     - name: "10:15 - 11:15 Lecture: Supervised ML (*In Zoom full group*)"
     - name: "11:15 - 11:45 Discussion (*In Zoom full group*)"
     - name: "11:45 - 12:45 Break"
-    - name: "12:45 - 3:00 Group Exercise (*In Zoom break-out rooms*)"
-    - name: "3:00 - 4:00 Guest Speaker: TBD (*In Zoom full group*)"
+    - name: "12:45 - 2:00 Guest Speaker: Abigail Jacobs  (*In Zoom full group*)"
+    - name: "2:00 - 4:00  Group Exercise (*In Zoom break-out rooms*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours"
     
           
