--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -52,7 +52,7 @@
     - name: "11:00 - 11:45 Small Group Discussions (*In Zoom break-out room*)"
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 2:00 Group Discussion + Exercise (*In Zoom break-out room*)"
-    - name: "2:00 - 4:00  Project Time (*In Zoom break-out room*)
+    - name: "2:00 - 4:00  Project Time (*In Zoom break-out room*)"
 
 - date: 2021-06-28
   name: Introduction to Text Analysis + Unsupervised Learning
