--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -57,9 +57,10 @@
   events:
     - name: "12.00 - 13.00 Guest speaker: Gijs van Dijck (*Zoom*)" 
     - name: "13.00 - 13.15 Break"
-    - name: "13.15 - 14.15 Small group lunches (*Zoom*)" 
+    - name: "13.15 - 14.15 Group formation (*Zoom*)" 
     - name: "14.15 - 14.45 Break"
-    - name: "14.45 - 16.30 Group study (*Zoom*)"
+    - name: "14.45 - 15.45 Survey Group Exercise Cont. (*Zoom*)"
+    - name: "15.45 - 16.45 Whole group debrief about group exercise (*Zoom*)"
       
 - date: 2021-06-19
   name: Day off
