--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -53,7 +53,7 @@
     - name: "18.00 - 19.00 Whole group debrief about group exercise (*Zoom*)"
     
 - date: 2021-06-18
-  name: "<b>Legal Predictions</b>"
+  name: "<b>Legal Predictions [Schedule Change]</b>"
   events:
     - name: "12.00 - 13.00 Guest speaker: Gijs van Dijck (*Zoom*)" 
     - name: "13.00 - 13.15 Break"
