--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -75,7 +75,7 @@
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 [Delete](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#deleting-the-files-after-use) the Fragile Families data from your computer"
-    - name: "5:00 - 6:30 Munmun de Choudhury Guest Lecture"
+    - name: "5:00 - 6:30 Munmun de Choudhury Guest Lecture (*Different Zoom link, posted on Slack*)"
 
 - date: 2021-06-19
   name: Day off
