--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -181,7 +181,7 @@
   - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*)"
   - name: "1:00 - 4:00 Work on group projects"
-  - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) (video) (Q&A) (slides)"
+  - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/qDWpPcILRtQ) (Q&A) (slides)"
 
 - date: 2021-06-22
   name: "Day 7: Work on group projects and participate in SICSS Festival"
@@ -191,7 +191,7 @@
   - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*) [(video)](https://youtu.be/euXlS8Ybo3Q) (Q&A) (slides)"
   - name: "1:00 - 4:00 Work on group projects" 
-  - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) (video) (Q&A) (slides)"
+  - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/lLVOGLDK97o) (Q&A) (slides)"
 
 - date: 2021-06-23
   name: "Day 8: Work on group projects and participate in SICSS Festival"
@@ -201,7 +201,7 @@
   - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video)"
   - name: "1:00 - 4:00 Work on group projects"
-  - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) (video) (Q&A) (slides)"
+  - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) [(video)](https://youtu.be/IoOQZUa_Akw) (Q&A) (slides)"
 
 - date: 2021-06-24
   name: "Day 9: Work on group projects and participate in SICSS Festival"
@@ -211,7 +211,7 @@
   - name: "10:15 - 4:00 Work on group projects"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom*) [(video)](https://youtu.be/q1MXHf5x7Nk) (Q&A) (slides)" 
   - name: "1:00 - 4:00 Work on group projects"
-  - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour (*Zoom*) (video) (Q&A) (slides)"
+  - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour (*Zoom*) [(video)](https://youtu.be/sZsjzksiD2M) (Q&A) (slides)"
 
 - date: 2021-06-25
   name: "Day 10: Present group projects and participate in SICSS Festival"
