--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -5,7 +5,7 @@
   events:
     - name: "10:00 - 10:15	Introduction: SICSS-Bologna (*Zoom*)"
     - name: "10:15 - 11:45	Ethics parts 1 & 2 (*Zoom*)"
-    - name: "12:30 - 13:30	Brown bag seminar: Workshop Individual Projects (*Zoom*)"
+    - name: "12:30 - 13:30	'Get to know you' lunch (*Zoom*)"
     - name: "14:00 - 15:15	Intro + Small groups: [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
     - name: "15:15 - 16:00	Group discussion (*Zoom*)"
 
