--- a/_data/2021/rutgers/teaching_assistants.yml
+++ b/_data/2021/rutgers/teaching_assistants.yml
@@ -7,7 +7,7 @@
   image: /assets/images/KatieKrumbholz.jpeg
 
 - name: Gabriel Varela
-  bio: "Gabriel Varela is a PhD student in the Sociology department at Duke University."
+  bio: "Gabriel Varela is a doctoral student in the Sociology department at Duke University."
   image: /assets/images/GabrielVarela.JPG
  
 - name: Luxuan Wang
