--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -142,7 +142,7 @@
     - name: "10:15 - 10:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md) (*Zoom*) (video)"
     - name: "10:30 - 11:30 Morning group exercise (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The California Policy Lab (encouraged) (*Zoom*) [(video)](https://youtu.be/POVOuJJy7Zo) (Q&A) (slides) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)'
+    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The California Policy Lab (encouraged) (*Zoom*) [(video)](https://youtu.be/POVOuJJy7Zo) (Q&A) [(slides)](https://drive.google.com/file/d/19-VJ6GbOihLLVHMr5o8mV19D6EjCju75/view?usp=sharing) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)'
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:00 - 3:15 Break"
@@ -158,7 +158,7 @@
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*) (video)"
     - name: "10:30 - 11:30 Participate in the Fragile Families Challenge activity [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: FactSpace West Africa and FakeNetAI (encouraged) (*Zoom*) [(video)](https://youtu.be/q5CVEa54Bt4) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: FactSpace West Africa and FakeNetAI (encouraged) (*Zoom*) [(video)](https://youtu.be/q5CVEa54Bt4) (Q&A) [(slides)](https://docs.google.com/presentation/d/1FR3iGF_Ky8rNMNAnPAfgkSIfTdOnDo1EmSLUsNVy_BM/edit) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:00 - 3:15 Break"
