--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -6,8 +6,8 @@
   events:
     - name: "10:00 - 10:20 Introduction to SICSS, Computational Social Science, and the California Center For Population Research by Dr. Jennie Brand (*In Zoom full group*)"
     - name: "10:20 - 10:40 Introductions (What is Computational Social Science) (*In rounds of Zoom break-out rooms*) "
-    - name: "10:45 - 11:45 Guest Speaker: Philipp Brandt (*In Zoom full group*)"
-    - name: "11:45 - 12:45 Break"
+    - name: "10:45 - 12:00 Guest Speaker: Philipp Brandt (*In Zoom full group*)"
+    - name: "12:00 - 12:45 Break"
     - name: "12:45 - 1:15 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
     - name: "1:15 - 2:30 Project Speed Dating: goal is to get to to know each other and brainstorm project ideas (*In Zoom breakout rooms*)"
     - name: "2:30 - 4:00 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
@@ -31,7 +31,8 @@
     - name: "10:15 - 11:00 Lecture: Potential Outcomes (*In Zoom full group*)"
     - name: "11:00 - 11:30 Small Group Discussions (*In Zoom break-out room*)"
     - name: "11:30 - 1:15 Break"
-    - name: "1:30 - 3:00 Group Discussion + Exercise (*In Zoom break-out room*)"
+    - name: "1:15 - 2:00 Group Discussion + Exercise (*In Zoom break-out room*)"
+    - name: "2:00 - 3:00 Guest Speaker: Jennie Brand (*In Zoom full group*)"
     - name: "3:00 - 4:00 Project Time: Finalize project groups, post abstract and list of group members to our #projects channel in Slack (*In Zoom break-out room*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
