--- a/_data/2021/hse/participants.yml
+++ b/_data/2021/hse/participants.yml
@@ -86,7 +86,7 @@
 - name: Angelika Tsivinskaya
   image: /assets/images/Tsivinskaya.jpg
   bio: "Angelika Tsivinskaya is a junior researcher in Center for Institutional Analysis of Science & Education, European University at Saint Petersburg (Russia). Her research interest lies at areas such as statistical analysis, science of science and CSS with focus on Higher education institutions."
-  website: https://scholar.google.com/citations?user=UbwVuqIAAAAJ&hl=en#
+  website: https://scholar.google.com/citations?user=wmweRYkAAAAJ&hl=en
 
 - name: Olga Vilkova
   image: /assets/images/Vilkova.jpg
