--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -78,16 +78,21 @@
 - date: 2021-06-22
   name: Work on group projects
   events:
+    - name: "All day: Work on Group Projects"
+    - name: "(Optional Festival Talk) 11:00 - 12:00 [Using images and video data for social science: Challenges and opportunities](https://sicss.io/festival)"
     - name: "12:30 - 2:00 Talk by Zhanna Terechshenko"
 
 - date: 2021-06-23
   name: Work on group projects
   events:
+    - name: "All day: Work on Group Projects"
     - name: "12:30 - 2:00 Talk by Munmun De Choudhury"
 
 - date: 2021-06-24
   name: Work on group projects
   events:
+    - name: "All day: Work on Group Projects"
+    - name: "(Optional Festival Advanced Tutorial) 11:00 - 12:30 [Tutorial on deep learning for causal inference](https://sicss.io/festival)"
     - name: "12:30 - 2:00 Talk by Hana Shepherd"
 
 - date: 2021-06-25
