--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -63,7 +63,7 @@
 - date: 2021-06-21
   name: (Morning) Network Analysis Continued
   events:
-    - name: "10:00 - 12:15 Logistics"
+    - name: "10:00 - 10:15 Logistics"
     - name: "10:15 - 12:00 Network Group Exercise"
     - name: "12:00 - 1:00 Small group lunches (optional)"
     - name: "1:00 - 2:00 Talk by Matthew Weber"
@@ -81,19 +81,23 @@
     - name: "All day: Work on Group Projects"
     - name: "(Optional Festival Talk) 11:00 - 12:00 [Using images and video data for social science: Challenges and opportunities](https://sicss.io/festival)"
     - name: "12:30 - 2:00 Talk by Zhanna Terechshenko"
+    - name: "By 3:00: Slack your group's project plan"
 
 - date: 2021-06-23
   name: Work on group projects
   events:
     - name: "All day: Work on Group Projects"
+    - name: "(Optional Talk from Twitter) 11:00 - 12:00 [Dr. Maria Rodriguez on exploratory data analysis in R with the TwitterAPI](https://twitter.com/TwitterDev/status/1405586027088007170)"
     - name: "12:30 - 2:00 Talk by Munmun De Choudhury"
-
+    - name: "By 3:00: Slack a brief project update"
+    
 - date: 2021-06-24
   name: Work on group projects
   events:
     - name: "All day: Work on Group Projects"
     - name: "(Optional Festival Advanced Tutorial) 11:00 - 12:30 [Tutorial on deep learning for causal inference](https://sicss.io/festival)"
     - name: "12:30 - 2:00 Talk by Hana Shepherd"
+    - name: "By 3:00: Slack a brief project update"
 
 - date: 2021-06-25
   name: Present group projects
