--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -1,5 +1,5 @@
 - date: All times are in Eastern Daylight Time. 
-  name: The schedule will run between 9:00AM-5:00PM, but on many days we may start later/end earlier
+  name: The schedule will run between approximately 9:00AM-5:30PM.
   events:
     - name: Specific schedule details subject to change.
 
