--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -86,7 +86,7 @@
 - date: 2021-06-21
   name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
   events:
-    - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors] (link coming soon)"
+    - name: "10:00 - 10:30 Research Speed Dating Logistics [Slides for Instructors](https://sicss.io/2021/materials/research-speed-dating/Speed_Dating_2021.html) (*Zoom*)"
     - name: "10:30 - 11:45 Research Speed Dating Maximally Similar Groups (*Zoom*)"
     - name: "11:45 - 1:15 Break"
     - name: "1:15 - 2:30 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
