--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -154,11 +154,11 @@
   events:
     - name: "[Day 5: Pre-arrival videos & corresponding slides](https://sicss.io/curriculum)"
     - name: "9:00 - 10:00 R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*) (You have received the Zoom link for today over email and Slack)"
-    - name: "10:00 - 10:15 Logistics (*Zoom*)"
-    - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*) (video)"
+    - name: "10:00 - 10:15 Logistics (*Zoom*) [(video)](https://youtu.be/7g-6NjUVGYU)"
+    - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*) [(video)](https://youtu.be/7g-6NjUVGYU)"
     - name: "10:30 - 11:30 Participate in the Fragile Families Challenge activity [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: FactSpace West Africa and FakeNetAI (encouraged) (*Zoom*) [(video)](https://youtu.be/q5CVEa54Bt4) (Q&A) [(slides)](https://docs.google.com/presentation/d/1FR3iGF_Ky8rNMNAnPAfgkSIfTdOnDo1EmSLUsNVy_BM/edit) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: FactSpace West Africa and FakeNetAI (encouraged) (*Zoom*) [(video)](https://youtu.be/q5CVEa54Bt4) [(Q&A)](https://youtu.be/DWSVIPOcaOU) [(slides)](https://docs.google.com/presentation/d/1FR3iGF_Ky8rNMNAnPAfgkSIfTdOnDo1EmSLUsNVy_BM/edit) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:00 - 3:15 Break"
