--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -7,10 +7,10 @@
     - name: "10:00 - 10:20 Introduction to SICSS, Computational Social Science, and the California Center For Population Research by Dr. Jennie Brand (*In Zoom full group*)"
     - name: "10:20 - 10:40 Introductions (What is Computational Social Science) (*In rounds of Zoom break-out rooms*) "
     - name: "10:45 - 12:00 Guest Speaker: Philipp Brandt (*In Zoom full group*)"
-    - name: "12:00 - 12:45 Break"
-    - name: "12:45 - 1:15 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
-    - name: "1:15 - 2:30 Project Speed Dating: goal is to get to to know each other and brainstorm project ideas (*In Zoom breakout rooms*)"
-    - name: "2:30 - 4:00 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
+    - name: "12:00 - 1:00 Break"
+    - name: "1:00 - 2:15 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
+    - name: "2:15 - 3:30 Project Speed Dating: Goal is to get to to know each other and brainstorm project ideas (*In Zoom breakout rooms*)"
+    - name: "3:30 - 4:00 Group Discussion + Intro to Tomorrow's Exercise (*In Zoom full group*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom (getting started with Slack, R, Q & A)"
 
 - date: 2021-06-22
@@ -56,7 +56,7 @@
     - name: "2:00 - 4:00  Project Time (*In Zoom full group*)"
 
 - date: 2021-06-28
-  name: Introduction to Text Analysis + Unsupervised Learning
+  name: Introduction to Text Analysis + Unsupervised Machine-Learning
   events:
     - name: "10:00 - 10:15 Outline the Day (*In Zoom full group*)"
     - name: "10:15 - 11:00 Lecture: Text Analysis (*In Zoom full group*)"
