--- a/_data/2021/lisbon/schedule.yml
+++ b/_data/2021/lisbon/schedule.yml
@@ -17,7 +17,7 @@
     - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
     - name: "3:20 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 [Apply](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#preparation) for data access for Fragile Families Challenge activity if you haven't already"
-    - name: "4:00 - 5:30 Talk by Prof. David Lazer"
+    - name: "4:00 - 5:30 Talk by Prof. David Lazer (by courtesy of SICSS-London & SICSS-Oxford)"
 
 - date: 2021-06-15
   name: Collecting Digital Trace Data
@@ -82,24 +82,36 @@
   name: Day off
 
 - date: 2021-06-21
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
   events:
-    - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors] (link coming soon)"
-    - name: "10:15 - 11:30 Research Speed Dating Maximally Similar Groups (*Zoom*)"
-    - name: "1:15 - 3:15 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
-    - name: "3:15 - 3:30 Group Debrief (join research teams) (*Zoom*)"
+    - name: "10:00 - 10:30 Research Speed Dating Logistics [Slides for Instructors](https://sicss.io/2021/materials/research-speed-dating/Speed_Dating_2021.html) (*Zoom*)"
+    - name: "10:30 - 11:45 Research Speed Dating Maximally Similar Groups (*Zoom*)"
+    - name: "11:45 - 1:15 Break"
+    - name: "1:15 - 2:30 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
+    - name: "2:30 - 2:45 Break"
+    - name: "2:45 - 3:00 Group Debrief (join research teams) (*Zoom*)"
 
 - date: 2021-06-22
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
+  events:
+    - name: "11:00 - 12:00 Using images and video data for social science: Challenges and opportunities (*Zoom*) [Register here](https://forms.gle/FaBQ1afa9nNdAppw8)"
+    - name: "1:00 - 2:00 Introduction to Text Analysis in Python: A Hands-on Tutorial (*Zoom*) Registration closed"
+    - name: "4:00 - 6:00 Talk by Eszter Hargittai (by courtesy of SICSS-London & SICSS-Oxford)"
 
 - date: 2021-06-23
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
+  events:
+    - name: "12:00 - 1:00 Panel discussion on the non-academic job market in computational social science (*Zoom*) [Register here](https://forms.gle/ixdR3wC4WzRRwpBS7)"
+    - name: "12:30 - 1:30 Panel discussion on the (many) paths to computational social science research in law (*Zoom*) [Register here](https://maastrichtuniversity.zoom.us/meeting/register/tJAufuuorj4pHNPKZElKXdZ7rI0QAENVXfdg)"
 
 - date: 2021-06-24
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
+  events:
+    - name: "11:00 - 12:30 Tutorial on deep learning for causal inference (*Zoom*) [Register here](https://forms.gle/b1EV5W6g9hrkbiRJA)"
+    - name: "1:00 - 2:00 Taking Quantitative Description Seriously (*Zoom*) [Register here](https://forms.gle/tRF7ttu4RoQKxfAJ7)"
 
 - date: 2021-06-25
-  name: Present group projects and/or participate in SICSS Festival
+  name: Present group projects
   events:
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
