--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -176,19 +176,20 @@
 - date: 2021-06-21
   name: "Day 6: Work on group projects and participate in SICSS Festival"
   events:
-  - name: "Mathematica TAs are available via email for consultation (please see list provided)"
-  - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
-  - name: "10:00 - 10:15 Logistics (*Zoom*)"
-  - name: "10:15 - 12:00 Work on group projects"
+  - name: "Mathematica TAs are available via email for consultation (please see Slack)"
+  - name: "10:00 - 10:30 Logistics and Research Speed Dating Logistics [(Slides for Instructors)](https://sicss.io/2021/materials/research-speed-dating/Speed_Dating_2021.html) (*Zoom*)"
+  - name: "10:30 - 11:45 Research Speed Dating Maximally Similar Groups (*Zoom*)"
+  - name: "11:45 - 12:00 Break"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Black in AI (encouraged) (*Zoom*) [(video)](https://youtu.be/uUyNd3yjTv8) (Q&A)"
-  - name: "1:00 - 4:00 Work on group projects"
+  - name: "1:00 - 2:30 Break"
+  - name: "2:30 - 3:45 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
+  - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*)"
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) [(video)](https://youtu.be/qDWpPcILRtQ) (Q&A) (slides)"
 
 - date: 2021-06-22
   name: "Day 7: Work on group projects and participate in SICSS Festival"
   events:
-  - name: "Mathematica TAs are available via email for consultation (please see list provided)"
-  - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
+  - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
   - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*) [(video)](https://youtu.be/euXlS8Ybo3Q) (Q&A) (slides)"
@@ -198,8 +199,7 @@
 - date: 2021-06-23
   name: "Day 8: Work on group projects and participate in SICSS Festival"
   events:
-  - name: "Mathematica TAs are available via email for consultation (please see list provided)"
-  - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
+  - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
   - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video)"
@@ -209,8 +209,7 @@
 - date: 2021-06-24
   name: "Day 9: Work on group projects and participate in SICSS Festival"
   events:
-  - name: "Mathematica TAs are available via email for consultation (please see list provided)"
-  - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
+  - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
   - name: "10:15 - 4:00 Work on group projects"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom*) [(video)](https://youtu.be/q1MXHf5x7Nk) (Q&A) (slides)" 
@@ -220,8 +219,7 @@
 - date: 2021-06-25
   name: "Day 10: Present group projects and participate in SICSS Festival"
   events:
-  - name: "Mathematica TAs are available via email for consultation (please see list provided)"
-  - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
+  - name: "Mathematica TAs are available via email for consultation (please see Slack)"
   - name: "10:00 - 10:15 Logistics"
   - name: "10:15 - 10:30 Break"
   - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI (*Zoom*) (video)"
