--- a/_data/2021/istanbul/people.yml
+++ b/_data/2021/istanbul/people.yml
@@ -97,6 +97,10 @@ alumni speakers:
     bio: "Burak Özturan is a Ph.D. Student in Network Science at Northeastern University, a graduate of SICSS-Istanbul-20. He will receive a master degree in Data Science at the University of Konstanz (Germany) this summer. He completed a bachelor in Economics at Boğaziçi University with honours. Currently, he is investigating the online vaccine disinformation on Twittersphere, where he exploits the social network analysis and the computational text analysis techniques. He has given numerous lectures on programming languages, statistics, and social science research methods. He presented his research at ECPR-20 (European Consortium for Political Research) and will present at the Networks 2021 conference."    
     website: 
 
+  - name: Hossein Kermani 
+    image: /2019/istanbul/images/Hossein.PNG
+    bio: "Hossein Kermani, PhD in Social Communication Science (University of Tehran), is studying social media, digital repression, computational propaganda, and political activism in restrictive contexts, with a especial focus on Iran. His research mainly revolves around the discursive power of social media in making meaning, shaping practices, changing the microphysics of power and playing with the political, cultural and social structures in Iran. Hossein will join POLCOM research group at University of Vienna soon."    
+    website: https://hosseinkermani.weebly.com/
     
 participants:
   title: Participants
